Fix PRI input field in dark mode
git-svn-id: file:///home/svn/DVA2006@17963 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a

--- a/static/css/delta_2007/form.css
+++ b/static/css/delta_2007/form.css
@@ -219,6 +219,10 @@ div#spinner {
 		color: #efefef;
 	}
 	
+	input.pri {
+		color: #dfdfff;
+	}
+	
 	input.req, textarea.req, input.err {
 		background-color: #004080;
 	}
